--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,54 +1,3 @@
-
-<!-- <div class="addUserForm">
-    <label for="name">Name:</label>
-    <input type="text" id="name" [formGroup]="name" />
-
-    <label for="surname">Surame:</label>
-    <input type="text" id="surname" [formGroup]="surname" />
-
-    <label for="birthdate">Birth Date:</label>
-    <input type="date" id="birthdate" [formGroup]="birthdate" />
-
-    <label for="email">Email:</label>
-    <input type="email" id="email" [formControl]="email" />
-
-    <label for="phone">Phone Number:</label>
-    <input type="tel" id="phone" [formControl]="phone" />
-
-    <label for="adresse">Adresse:</label>
-    <input type="text" id="adresse" [formControl]="adresse" />
-
-</div> -->
-<!-- <div class="addUserForm">
-
-        <mat-form-field appearance="fill" ><mat-label>Name</mat-label><input matInput></mat-form-field>
-
-        <mat-form-field appearance="fill" ><mat-label>Surname</mat-label> <input matInput> </mat-form-field>
-
-    
-        <mat-form-field appearance="fill" > <mat-label>adress</mat-label><input matInput></mat-form-field>
-      
-        <mat-form-field appearance="fill" >><mat-label>phone</mat-label><input matInput></mat-form-field>
-      
-        <mat-form-field appearance="fill" >><mat-label>email</mat-label><input matInput></mat-form-field>
- 
-        <mat-form-field appearance="fill" > <mat-label>adress</mat-label><input matInput></mat-form-field>
-</div> -->
-
-
-    <!-- <form>
-
-        <mat-form-field></mat-form-field>
-        <mat-label>Name</mat-label>
-        <input matInput  formControlName="name" >
-
-</form> -->
-<!-- <form [formGroup]="userForm" (ngSubmit)="AddUser()">
-    <mat-form-field>
-      <mat-label>Prénom</mat-label>
-      <input matInput formControlName="name">
-    </mat-form-field> -->
-
 <div class="formulaire">
     <form [formGroup]="userForm" (ngSubmit)="AddUser()" class="addUserForm">
         <mat-form-field appearance="fill"> <mat-label>Name</mat-label> <input matInput formControlName="name"></mat-form-field>
@@ -60,7 +9,7 @@
 
         <button mat-raised-button type="submit">Add user</button>
 
-        <button type="button" ng-click="editUser(user)">Edit</button>
+        
     </form>
 </div>
 
@@ -69,11 +18,11 @@
     <table>
       <thead>
         <tr>
-          <th>Id          </th>
-          <th>Name           </th>
-          <th>Surname         </th>
-          <th>Birthdate         </th>
-          <th>Email         </th>
+          <th>Id</th>
+          <th>Name</th>
+          <th>Surname</th>
+          <th>Birthdate</th>
+          <th>Email </th>
           <th>Phone Number         </th>
           <th>Adress         </th>
         </tr>
@@ -87,6 +36,7 @@
           <td>{{ user.email }}</td>
           <td>{{ user.phone }}</td>
           <td>{{ user.adresse }}</td>
+          <td><button type="button" ng-click="editUser(user)">Edit</button></td>
         </tr>
       </tbody>
     </table>
