oula, routes + importation array

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,13 @@
 <h1>home works!</h1>
+
 <nav>
+
   <a routerLink="/">Home</a>
-    <a routerLink="/user">user</a>
+  <br>
+
+  <a routerLink="/user">user</a>
+  <br>
+
+  <a routerLink="/userList">userList</a>
+
 </nav>
