--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -12,9 +12,10 @@
         
     </form>
 </div>
-
+<nav ><a routerLink="/">Home</a></nav>
+SHOW USER CREATED
  <div class="userTable">
-    <h3>List of useers</h3>
+    <h3>List of users</h3>
     <table>
       <thead>
         <tr>
