modif plus de route plus de list comopnent

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,4 @@
-<h1>home works!</h1>
-<nav>
-  <a routerLink="/">Home</a>
-    <a routerLink="/user">user</a>
-</nav>
+<mat-drawer-container class="example-container">
+  <mat-drawer mode="side" opened>Drawer content</mat-drawer>
+  <mat-drawer-content>Main content</mat-drawer-content>
+</mat-drawer-container>
