pitie ca remarche...

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -12,7 +12,7 @@
         
     </form>
 </div>
-
+<!-- 
  <div class="userTable">
     <h3>List of useers</h3>
     <table>
@@ -40,8 +40,6 @@
         </tr>
       </tbody>
     </table>
+  
 
-
-    
-
-  </div>  
+  </div>   -->
