--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
-<h1>home works!</h1>
-<nav>
-  <a routerLink="/">Home</a>
-    <a routerLink="/user">user</a>
-</nav>
+<mat-drawer-container class="example-container">
+  <mat-drawer mode="side" opened>
+    <button mat-button>Create an user</button><br>
+     <button mat-button>List of users</button>
+  </mat-drawer>
+  <mat-drawer-content>Main content</mat-drawer-content>
+</mat-drawer-container>
